added data_cleaner.py file

--- a/DataExploration.ipynb
+++ b/DataExploration.ipynb
@@ -9,15 +9,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "\n",
-    "# drop unnamed columns \n",
-    "# drop duplicates\n",
-    "# drop 'Proj. Time' column\n",
-    "# drop any 'Duo' \n",
-    "\n",
-    "# questions\n",
-    "# should I convert to seconds or minutes?\n",
-    "# does the sub division matter? VI, MI, "
+    "import numpy as np"
    ]
   },
   {
@@ -237,6 +229,7 @@
     "df16 = pd.read_csv('data/marathon_results_2016.csv')\n",
     "df17 = pd.read_csv('data/marathon_results_2017.csv')\n",
     "df18 = pd.read_csv('data/marathon_results_2018.csv')\n",
+    "df18.rename(columns={'Blank': 'Unnamed'}, inplace = True)\n",
     "print(df18.shape)\n",
     "df18.head()"
    ]
@@ -245,168 +238,38 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 24087 entries, 0 to 24086\n",
-      "Data columns (total 26 columns):\n",
-      "Unnamed: 0       24087 non-null int64\n",
-      "Unnamed: 0.1     24087 non-null int64\n",
-      "Bib              24087 non-null object\n",
-      "Name             24087 non-null object\n",
-      "Age              24087 non-null int64\n",
-      "M/F              24087 non-null object\n",
-      "City             24087 non-null object\n",
-      "State            20050 non-null object\n",
-      "Country          24087 non-null object\n",
-      "Citizen          1417 non-null object\n",
-      "Blank            106 non-null object\n",
-      "5K               24087 non-null object\n",
-      "10K              24087 non-null object\n",
-      "15K              24087 non-null object\n",
-      "20K              24087 non-null object\n",
-      "Half             24087 non-null object\n",
-      "25K              24087 non-null object\n",
-      "30K              24087 non-null object\n",
-      "35K              24087 non-null object\n",
-      "40K              24087 non-null object\n",
-      "Pace             24087 non-null object\n",
-      "Proj. Time       245 non-null object\n",
-      "Official Time    24087 non-null object\n",
-      "Overall          24087 non-null int64\n",
-      "Gender           24087 non-null int64\n",
-      "Division         24087 non-null int64\n",
-      "dtypes: int64(6), object(20)\n",
-      "memory usage: 4.8+ MB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# find duplicates\n",
-    "df18.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "45    1002\n",
-       "40     910\n",
-       "46     897\n",
-       "47     888\n",
-       "50     791\n",
-       "41     785\n",
-       "48     746\n",
-       "42     706\n",
-       "37     682\n",
-       "43     679\n",
-       "36     678\n",
-       "49     667\n",
-       "51     667\n",
-       "55     646\n",
-       "35     639\n",
-       "38     626\n",
-       "44     621\n",
-       "52     606\n",
-       "39     574\n",
-       "56     538\n",
-       "53     512\n",
-       "32     511\n",
-       "31     505\n",
-       "54     500\n",
-       "27     499\n",
-       "28     489\n",
-       "29     481\n",
-       "60     477\n",
-       "30     476\n",
-       "34     473\n",
-       "      ... \n",
-       "61     350\n",
-       "24     331\n",
-       "58     293\n",
-       "59     271\n",
-       "62     238\n",
-       "23     225\n",
-       "63     205\n",
-       "65     195\n",
-       "22     153\n",
-       "66     143\n",
-       "64     119\n",
-       "21     111\n",
-       "67     105\n",
-       "68      77\n",
-       "70      67\n",
-       "20      67\n",
-       "71      61\n",
-       "69      44\n",
-       "19      27\n",
-       "72      20\n",
-       "75      14\n",
-       "73      12\n",
-       "18      10\n",
-       "76      10\n",
-       "74       8\n",
-       "80       5\n",
-       "77       3\n",
-       "82       1\n",
-       "81       1\n",
-       "78       1\n",
-       "Name: Age, Length: 64, dtype: int64"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# df18['Blank'].value_counts()\n",
+    "def seconds_converter(time):\n",
+    "    '''Takes a time in the string form '00:00:00' and converts it into integer of seconds.\n",
+    "    Handles special '-' cases and converts them to NaNs '''\n",
+    "    \n",
+    "    if time == '-':\n",
+    "        return np.nan\n",
+    "    time_split = [int(x) for x in(time.split(':'))]\n",
+    "    return time_split[0]*(60**2) + time_split[1]*60 + time_split[2] \n",
     "\n",
-    "# df18[df18['State'] == 'MA']['M/F'].value_counts()\n",
-    "df18['Age'].value_counts()"
+    "def clean_data(df):\n",
+    "    '''Takes in a DataFrame, drops unnecessary columns, and applies seconds_converter. '''\n",
+    "    \n",
+    "    df.drop(list(df.filter(regex='Unnamed')), axis=1, inplace=True)\n",
+    "    df.drop(['Citizen', 'Proj. Time'], axis=1, inplace=True)\n",
+    "    \n",
+    "    time_cols = ['5K', '10K', '15K', '20K', 'Half', '25K', \n",
+    "             '30K', '35K', '40K', 'Pace', 'Official Time']\n",
+    "\n",
+    "    for col in time_cols:\n",
+    "        df18[col] = df18[col].apply(seconds_converter)\n",
+    " \n",
+    "    return df\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "F    2467\n",
-       "M    2119\n",
-       "Name: M/F, dtype: int64"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df17[df17['State'] == 'MA']['M/F'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(26410, 25)\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -428,7 +291,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>Bib</th>\n",
        "      <th>Name</th>\n",
        "      <th>Age</th>\n",
@@ -436,15 +298,16 @@
        "      <th>City</th>\n",
        "      <th>State</th>\n",
        "      <th>Country</th>\n",
-       "      <th>Citizen</th>\n",
-       "      <th>Unnamed: 9</th>\n",
+       "      <th>5K</th>\n",
+       "      <th>10K</th>\n",
+       "      <th>15K</th>\n",
        "      <th>...</th>\n",
+       "      <th>Half</th>\n",
        "      <th>25K</th>\n",
        "      <th>30K</th>\n",
        "      <th>35K</th>\n",
        "      <th>40K</th>\n",
        "      <th>Pace</th>\n",
-       "      <th>Proj Time</th>\n",
        "      <th>Official Time</th>\n",
        "      <th>Overall</th>\n",
        "      <th>Gender</th>\n",
@@ -454,210 +317,190 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>11</td>\n",
-       "      <td>Kirui, Geoffrey</td>\n",
-       "      <td>24</td>\n",
+       "      <td>189</td>\n",
+       "      <td>Ash, Alan</td>\n",
+       "      <td>26</td>\n",
        "      <td>M</td>\n",
-       "      <td>Keringet</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>KEN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Atmore</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1078.0</td>\n",
+       "      <td>2165.0</td>\n",
+       "      <td>3258.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>1:16:59</td>\n",
-       "      <td>1:33:01</td>\n",
-       "      <td>1:48:19</td>\n",
-       "      <td>2:02:53</td>\n",
-       "      <td>0:04:57</td>\n",
-       "      <td>-</td>\n",
-       "      <td>2:09:37</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>4606.0</td>\n",
+       "      <td>5476.0</td>\n",
+       "      <td>6619.0</td>\n",
+       "      <td>7762.0</td>\n",
+       "      <td>8888.0</td>\n",
+       "      <td>358</td>\n",
+       "      <td>9364</td>\n",
+       "      <td>63</td>\n",
+       "      <td>63</td>\n",
+       "      <td>59</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>17</td>\n",
-       "      <td>Rupp, Galen</td>\n",
-       "      <td>30</td>\n",
+       "      <td>855</td>\n",
+       "      <td>Goodman, John Mark</td>\n",
+       "      <td>38</td>\n",
        "      <td>M</td>\n",
-       "      <td>Portland</td>\n",
-       "      <td>OR</td>\n",
+       "      <td>Birmingham</td>\n",
+       "      <td>AL</td>\n",
        "      <td>USA</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1123.0</td>\n",
+       "      <td>2261.0</td>\n",
+       "      <td>3401.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>1:16:59</td>\n",
-       "      <td>1:33:01</td>\n",
-       "      <td>1:48:19</td>\n",
-       "      <td>2:03:14</td>\n",
-       "      <td>0:04:58</td>\n",
-       "      <td>-</td>\n",
-       "      <td>2:09:58</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
+       "      <td>4788.0</td>\n",
+       "      <td>5673.0</td>\n",
+       "      <td>6829.0</td>\n",
+       "      <td>8007.0</td>\n",
+       "      <td>9186.0</td>\n",
+       "      <td>371</td>\n",
+       "      <td>9712</td>\n",
+       "      <td>187</td>\n",
+       "      <td>186</td>\n",
+       "      <td>173</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>23</td>\n",
-       "      <td>Osako, Suguru</td>\n",
-       "      <td>25</td>\n",
+       "      <td>1049</td>\n",
+       "      <td>Mcclung, Joshua</td>\n",
+       "      <td>34</td>\n",
        "      <td>M</td>\n",
-       "      <td>Machida-City</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>JPN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Birmingham</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1125.0</td>\n",
+       "      <td>2249.0</td>\n",
+       "      <td>3399.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>1:17:00</td>\n",
-       "      <td>1:33:01</td>\n",
-       "      <td>1:48:31</td>\n",
-       "      <td>2:03:38</td>\n",
-       "      <td>0:04:59</td>\n",
-       "      <td>-</td>\n",
-       "      <td>2:10:28</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
+       "      <td>4805.0</td>\n",
+       "      <td>5731.0</td>\n",
+       "      <td>6914.0</td>\n",
+       "      <td>8114.0</td>\n",
+       "      <td>9285.0</td>\n",
+       "      <td>375</td>\n",
+       "      <td>9822</td>\n",
+       "      <td>247</td>\n",
+       "      <td>246</td>\n",
+       "      <td>226</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>21</td>\n",
-       "      <td>Biwott, Shadrack</td>\n",
-       "      <td>32</td>\n",
+       "      <td>303</td>\n",
+       "      <td>Graham, James</td>\n",
+       "      <td>26</td>\n",
        "      <td>M</td>\n",
-       "      <td>Mammoth Lakes</td>\n",
-       "      <td>CA</td>\n",
+       "      <td>Birmingham</td>\n",
+       "      <td>AL</td>\n",
        "      <td>USA</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1138.0</td>\n",
+       "      <td>2244.0</td>\n",
+       "      <td>3350.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>1:17:00</td>\n",
-       "      <td>1:33:01</td>\n",
-       "      <td>1:48:58</td>\n",
-       "      <td>2:04:35</td>\n",
-       "      <td>0:05:03</td>\n",
-       "      <td>-</td>\n",
-       "      <td>2:12:08</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
+       "      <td>4713.0</td>\n",
+       "      <td>5589.0</td>\n",
+       "      <td>6749.0</td>\n",
+       "      <td>8029.0</td>\n",
+       "      <td>9437.0</td>\n",
+       "      <td>383</td>\n",
+       "      <td>10027</td>\n",
+       "      <td>385</td>\n",
+       "      <td>377</td>\n",
+       "      <td>346</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>9</td>\n",
-       "      <td>Chebet, Wilson</td>\n",
+       "      <td>5267</td>\n",
+       "      <td>Pierce, Nathaniel</td>\n",
        "      <td>31</td>\n",
        "      <td>M</td>\n",
-       "      <td>Marakwet</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>KEN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Huntsville</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1210.0</td>\n",
+       "      <td>2409.0</td>\n",
+       "      <td>3615.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>1:16:59</td>\n",
-       "      <td>1:33:01</td>\n",
-       "      <td>1:48:41</td>\n",
-       "      <td>2:05:00</td>\n",
-       "      <td>0:05:04</td>\n",
-       "      <td>-</td>\n",
-       "      <td>2:12:35</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
+       "      <td>5079.0</td>\n",
+       "      <td>6023.0</td>\n",
+       "      <td>7242.0</td>\n",
+       "      <td>8482.0</td>\n",
+       "      <td>9686.0</td>\n",
+       "      <td>390</td>\n",
+       "      <td>10219</td>\n",
+       "      <td>608</td>\n",
+       "      <td>593</td>\n",
+       "      <td>536</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 25 columns</p>\n",
+       "<p>5 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0 Bib              Name  Age M/F           City State Country  \\\n",
-       "0           0  11   Kirui, Geoffrey   24   M       Keringet   NaN     KEN   \n",
-       "1           1  17       Rupp, Galen   30   M       Portland    OR     USA   \n",
-       "2           2  23     Osako, Suguru   25   M   Machida-City   NaN     JPN   \n",
-       "3           3  21  Biwott, Shadrack   32   M  Mammoth Lakes    CA     USA   \n",
-       "4           4   9    Chebet, Wilson   31   M       Marakwet   NaN     KEN   \n",
+       "    Bib                Name  Age M/F        City State Country      5K  \\\n",
+       "0   189           Ash, Alan   26   M      Atmore    AL     USA  1078.0   \n",
+       "1   855  Goodman, John Mark   38   M  Birmingham    AL     USA  1123.0   \n",
+       "2  1049     Mcclung, Joshua   34   M  Birmingham    AL     USA  1125.0   \n",
+       "3   303       Graham, James   26   M  Birmingham    AL     USA  1138.0   \n",
+       "4  5267   Pierce, Nathaniel   31   M  Huntsville    AL     USA  1210.0   \n",
        "\n",
-       "  Citizen Unnamed: 9   ...         25K      30K      35K      40K     Pace  \\\n",
-       "0     NaN        NaN   ...     1:16:59  1:33:01  1:48:19  2:02:53  0:04:57   \n",
-       "1     NaN        NaN   ...     1:16:59  1:33:01  1:48:19  2:03:14  0:04:58   \n",
-       "2     NaN        NaN   ...     1:17:00  1:33:01  1:48:31  2:03:38  0:04:59   \n",
-       "3     NaN        NaN   ...     1:17:00  1:33:01  1:48:58  2:04:35  0:05:03   \n",
-       "4     NaN        NaN   ...     1:16:59  1:33:01  1:48:41  2:05:00  0:05:04   \n",
+       "      10K     15K    ...       Half     25K     30K     35K     40K  Pace  \\\n",
+       "0  2165.0  3258.0    ...     4606.0  5476.0  6619.0  7762.0  8888.0   358   \n",
+       "1  2261.0  3401.0    ...     4788.0  5673.0  6829.0  8007.0  9186.0   371   \n",
+       "2  2249.0  3399.0    ...     4805.0  5731.0  6914.0  8114.0  9285.0   375   \n",
+       "3  2244.0  3350.0    ...     4713.0  5589.0  6749.0  8029.0  9437.0   383   \n",
+       "4  2409.0  3615.0    ...     5079.0  6023.0  7242.0  8482.0  9686.0   390   \n",
        "\n",
-       "  Proj Time Official Time Overall Gender Division  \n",
-       "0         -       2:09:37       1      1        1  \n",
-       "1         -       2:09:58       2      2        2  \n",
-       "2         -       2:10:28       3      3        3  \n",
-       "3         -       2:12:08       4      4        4  \n",
-       "4         -       2:12:35       5      5        5  \n",
+       "   Official Time  Overall  Gender  Division  \n",
+       "0           9364       63      63        59  \n",
+       "1           9712      187     186       173  \n",
+       "2           9822      247     246       226  \n",
+       "3          10027      385     377       346  \n",
+       "4          10219      608     593       536  \n",
        "\n",
-       "[5 rows x 25 columns]"
+       "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(df17.shape)\n",
-    "df17.head()"
+    "df18 = clean_data(df18)\n",
+    "df18.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
-   "source": [
-    "df17[df17['State'] == 'MA']"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
-   "source": [
-    "df17.info()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
-   "source": [
-    "df17['Unnamed: 9'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(df16.shape)\n",
-    "df16.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(df15.shape)\n",
-    "df15.head()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
